force-app/main/default/objects/Animal_Transport__c/Animal_Transport__c.object-meta.xml
<CustomObject>
    <label>Animal Transport</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Animal Transport #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Transports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>