force-app/main/default/objects/Animal_Transport__c/fields/BRC_Transports__c.field-meta.xml
<CustomField>
    <fullName>BRC_Transports__c</fullName>
    <label>BRC Transports</label>
    <summaryFilterItems>
        <field>Transport_Animal_Detail__c.Source_Shelter__c</field>
        <operation>contains</operation>
        <value>0015A00002ScGhtQAF</value>
    </summaryFilterItems>
    <summaryForeignKey>Transport_Animal_Detail__c.Transport_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>