force-app/main/default/objects/Animal_Transport__c/fields/Calendar_Week_Num__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Week_Num__c</fullName>
    <formula>((IF(
CEILING( ( (Transport_Completed_Date__c + ( 6- (MOD( Transport_Completed_Date__c - DATE( 1900, 1, 7 ), 7 ))))- DATE( YEAR( (Transport_Completed_Date__c + ( 6- (MOD( Transport_Completed_Date__c - DATE( 1900, 1, 7 ), 7 ))))), 1, 1) + 1) / 7) &gt; 52,
52,
CEILING( ( (Transport_Completed_Date__c + ( 6- (MOD( Transport_Completed_Date__c - DATE( 1900, 1, 7 ), 7 ))))- DATE( YEAR( (Transport_Completed_Date__c + ( 6- (MOD( Transport_Completed_Date__c - DATE( 1900, 1, 7 ), 7 ))))), 1, 1) + 1) / 7)
)))</formula>
    <label>Calendar Week Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>