force-app/main/default/objects/Animal_Transport__c/fields/Calendar_Week_Text__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Week_Text__c</fullName>
    <formula>LPAD(TEXT((IF(
CEILING( ( (Transport_Completed_Date__c + ( 6- (MOD( Transport_Completed_Date__c - DATE( 1900, 1, 7 ), 7 ))))- DATE( YEAR( (Transport_Completed_Date__c + ( 6- (MOD( Transport_Completed_Date__c - DATE( 1900, 1, 7 ), 7 ))))), 1, 1) + 1) / 7) &gt; 52,
52,
CEILING( ( (Transport_Completed_Date__c + ( 6- (MOD( Transport_Completed_Date__c - DATE( 1900, 1, 7 ), 7 ))))- DATE( YEAR( (Transport_Completed_Date__c + ( 6- (MOD( Transport_Completed_Date__c - DATE( 1900, 1, 7 ), 7 ))))), 1, 1) + 1) / 7)
))), 2, &apos;0&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Week Text</label>
    <type>Text</type>
</CustomField>