force-app/main/default/objects/Animal_Transport__c/fields/Calendar_Year_Num__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Year_Num__c</fullName>
    <formula>YEAR( Transport_Completed_Date__c)</formula>
    <label>Calendar Year Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>