force-app/main/default/objects/Animal_Transport__c/fields/Calendar_Year_Text__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Year_Text__c</fullName>
    <formula>TEXT(YEAR( Transport_Completed_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Year Text</label>
    <type>Text</type>
</CustomField>