force-app/main/default/objects/Animal_Transport__c/fields/Cost_to_ASPCA__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_ASPCA__c</fullName>
    <label>Cost to ASPCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>