force-app/main/default/objects/Animal_Transport__c/fields/Description_of_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Other_Reason__c</fullName>
    <label>Description of Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>