force-app/main/default/objects/Animal_Transport__c/fields/Disaster_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Certificate__c</fullName>
    <label>Disaster Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>