force-app/main/default/objects/Animal_Transport__c/fields/Driver_1__c.field-meta.xml
<CustomField>
    <fullName>Driver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver #1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Contact_Type__c</field>
            <operation>equals</operation>
            <value>Relocation Driver</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Animal Transports</relationshipLabel>
    <relationshipName>Animal_Transports</relationshipName>
    <type>Lookup</type>
</CustomField>