force-app/main/default/objects/Animal_Transport__c/fields/Driver_3__c.field-meta.xml
<CustomField>
    <fullName>Driver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver #3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Animal Transports (Driver #3)</relationshipLabel>
    <relationshipName>Animal_Transports2</relationshipName>
    <type>Lookup</type>
</CustomField>