force-app/main/default/objects/Animal_Transport__c/fields/Method_of_Transport__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Transport__c</fullName>
    <label>Method of Transport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ground_ASPCA_Vehicle</fullName>
                <label>Ground - ASPCA Vehicle</label>
            </value>
            <value>
                <fullName>Ground - Partner Vehicle</fullName>
            </value>
            <value>
                <fullName>Ground - Other Vehicle (rented, volunteer, etc)</fullName>
            </value>
            <value>
                <fullName>Air - Wings of Rescue</fullName>
            </value>
            <value>
                <fullName>Air - Alaska Airlines</fullName>
            </value>
            <value>
                <fullName>Air - American Airlines</fullName>
            </value>
            <value>
                <fullName>Air - Dog is my Co-pilot</fullName>
            </value>
            <value>
                <fullName>Air - Doobert</fullName>
            </value>
            <value>
                <fullName>Air - Pilot to the Rescue</fullName>
            </value>
            <value>
                <fullName>Air - Pilots &amp; Paws</fullName>
            </value>
            <value>
                <fullName>Air - Other</fullName>
            </value>
            <value>
                <fullName>Included in Other Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>