force-app/main/default/objects/Animal_Transport__c/fields/Method_of_Transport_Type__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Transport_Type__c</fullName>
    <description>Changes Method of Transport to a Summarized Field</description>
    <formula>IF(CONTAINS(  Transport_Method_Type__c  , &quot;Ground&quot;), &quot;Ground&quot;, IF(CONTAINS( Transport_Method_Type__c , &quot;Air&quot;), &quot;Air&quot;, &quot;Other&quot;))</formula>
    <label>Method of Transport Type</label>
    <type>Text</type>
</CustomField>