force-app/main/default/objects/Animal_Transport__c/fields/PeeWee_Transport__c.field-meta.xml
<CustomField>
    <fullName>PeeWee_Transport__c</fullName>
    <formula>IF(Total_PeeWees__c &gt; 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PeeWee Transport</label>
    <type>Checkbox</type>
</CustomField>