force-app/main/default/objects/Animal_Transport__c/fields/Provide_Type__c.field-meta.xml
<CustomField>
    <fullName>Provide_Type__c</fullName>
    <label>Provide Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>