force-app/main/default/objects/Animal_Transport__c/fields/Reason_for_Cost__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cost__c</fullName>
    <label>Reason for Cost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transport Costs</fullName>
            </value>
            <value>
                <fullName>Make-ready Costs (includes pre-transport vet care)</fullName>
            </value>
            <value>
                <fullName>Post-Transport Vet Care/treatment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>