force-app/main/default/objects/Animal_Transport__c/fields/Reason_for_Transport__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Transport__c</fullName>
    <label>Reason for Transport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LA Initiative</fullName>
            </value>
            <value>
                <fullName>Non-LA Initiative</fullName>
            </value>
            <value>
                <fullName>NSRR</fullName>
            </value>
            <value>
                <fullName>Watershed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>