force-app/main/default/objects/Animal_Transport__c/fields/Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce ID</label>
    <type>Text</type>
</CustomField>