force-app/main/default/objects/Animal_Transport__c/fields/Second_Vehicle_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Second_Vehicle_Name_Number__c</fullName>
    <label>Second Vehicle Name/Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transport_Vehicle_List</valueSetName>
    </valueSet>
</CustomField>