force-app/main/default/objects/Animal_Transport__c/fields/Total_PeeWees__c.field-meta.xml
<CustomField>
    <fullName>Total_PeeWees__c</fullName>
    <label>Total PeeWees</label>
    <summarizedField>Transport_Animal_Detail__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Transport_Animal_Detail__c.Species__c</field>
        <operation>equals</operation>
        <value>PeeWee</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transport_Animal_Detail__c.Destination_Shelter__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Transport_Animal_Detail__c.Transport_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>