force-app/main/default/objects/Animal_Transport__c/fields/Transport_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Transport_Completed_Date__c</fullName>
    <label>Transport Completed Date</label>
    <type>Date</type>
</CustomField>