force-app/main/default/objects/Animal_Transport__c/fields/Transport_Description__c.field-meta.xml
<CustomField>
    <fullName>Transport_Description__c</fullName>
    <label>Transport Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>