force-app/main/default/objects/Animal_Transport__c/fields/Transport_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>Transport_Method_Type__c</fullName>
    <formula>TEXT( Method_of_Transport__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport Method Type</label>
    <type>Text</type>
</CustomField>