force-app/main/default/objects/Animal_Transport__c/fields/Transport_Request_Received__c.field-meta.xml
<CustomField>
    <fullName>Transport_Request_Received__c</fullName>
    <label>Transport Request Received</label>
    <type>Date</type>
</CustomField>