force-app/main/default/objects/Animal_Transport__c/fields/Transport_Status__c.field-meta.xml
<CustomField>
    <fullName>Transport_Status__c</fullName>
    <defaultValue>&apos;Completed&apos;</defaultValue>
    <label>Transport Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t Occur</fullName>
                <isActive>false</isActive>
                <label>Didn&apos;t Occur</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>