force-app/main/default/objects/Animal_Transport__c/fields/Transport_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Transport_Subtype__c</fullName>
    <label>Transport Subtype</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disaster</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>