force-app/main/default/objects/Animal_Transport__c/fields/Transport_Type__c.field-meta.xml
<CustomField>
    <fullName>Transport_Type__c</fullName>
    <label>Transport Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Relo</fullName>
            </value>
            <value>
                <fullName>Facilitated Relo</fullName>
            </value>
            <value>
                <fullName>Grant Facilitated Relo</fullName>
            </value>
            <value>
                <fullName>Flight Facilitated Relo</fullName>
            </value>
            <value>
                <fullName>Disaster</fullName>
                <isActive>false</isActive>
                <label>Disaster</label>
            </value>
            <value>
                <fullName>Placement</fullName>
                <isActive>false</isActive>
                <label>Placement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>