force-app/main/default/objects/Animal_Transport__c/fields/Transport_Year__c.field-meta.xml
<CustomField>
    <fullName>Transport_Year__c</fullName>
    <formula>TEXT(YEAR( Transport_Completed_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport Year</label>
    <type>Text</type>
</CustomField>