force-app/main/default/objects/Animal_Transport__c/fields/Transporter__c.field-meta.xml
<CustomField>
    <fullName>Transporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transporter</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Animal Transports</relationshipLabel>
    <relationshipName>Animal_Transports</relationshipName>
    <type>Lookup</type>
</CustomField>