force-app/main/default/objects/Animal_Transport__c/fields/Vehicle_NameNumber__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_NameNumber__c</fullName>
    <label>Vehicle Name/Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transport_Vehicle_List</valueSetName>
    </valueSet>
</CustomField>