force-app/main/default/objects/Animal_Transport__c/fields/Week_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_End_Date__c</fullName>
    <formula>Transport_Completed_Date__c + ( 6- (MOD( Transport_Completed_Date__c - DATE( 1900, 1, 7 ), 7 )))</formula>
    <label>Week End Date</label>
    <type>Date</type>
</CustomField>