force-app/main/default/objects/Animal_Transport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Transport_Request_Received__c</columns>
    <columns>Reason_for_Transport__c</columns>
    <columns>Describe__c</columns>
    <columns>Provide_Type__c</columns>
    <columns>Disaster_Certificate__c</columns>
    <columns>Certificate_Number__c</columns>
    <columns>Transport_Description__c</columns>
    <columns>Transport_Type__c</columns>
    <columns>Method_of_Transport__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>