force-app/main/default/objects/Animal_Transport__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Transport_Completed_Date__c</columns>
    <columns>Transport_Type__c</columns>
    <columns>Reason_for_Transport__c</columns>
    <columns>Total_Number_of_Animals__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>